# Portfolio

Bots/: imagebot.py  youtubelinker.py
Bots/HObot/: COVID.py  HObot.py  Hobot.py  Imgur_cuties.py  ai.py  fortyk.py  heise.py  movielib.py  music.py  nlp.py  requirements.txt  trump.py  urban.py  weather.py
Bots/ModMon/: Modmon.py  get_reddit.py  logging_posts.py  requirements.txt
DSA_Dice/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  skill_list.json
DSA_Dice/dsa_dice/: __init___.py  character.py  constants.py  dice.py  logic.py  main.py  skills.py
DSA_Dice/dsa_dice/data/: alrik.json
DSA_Dice/tests/: test_get_values.py  test_loading_and_decoding.py  test_logic.py  test_main.py  test_normalize_skill.py  test_resolve_roll.py
Database+unittest/: bspDB.py  bspDB_unittest.py
Networking/: spam_mail_v0.2.1.py  spam_mail_v0.3.2.py  threaded_echo.py
Other/: binhexconverter.py  create_pics.py  digital_clock.py  oingoboingo.py  permutation_palindrom_test.py  portscan.py  quicksort.py.txt  robotCustomKWCollection.py  sort_robots.py  threaded_status_check.py
Other/Sorting Algorithms/: bubblesort.py  mergesort.py  quicksort.py
Other/YtAlarm/: content.txt  total_alert.py  ytAlarm.py
ShellScripts/: fixCRLF.sh
tetris/: tetris.py
