[project]
name = "dsa-dice"
version = "0.1.0"
description = ""
authors = [
    { name = "Schmidt23" }
]
requires-python = ">=3.14"
dependencies = []

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff>=0.15.5,<0.16.0",
    "black>=26.1.0,<27.0.0",
    "pre-commit>=4.5.1,<5.0.0",
    "pytest>=9.0.2,<10.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["venv", ".venv", ".git"]
lint.select = ["D", "F", "I", "UP", "TID", "ANN"]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]


[tool.black]
line-length = 88
target-version = ["py314"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

